[gd_scene load_steps=4 format=3 uid="uid://dhjpqcblgi07e"]

[ext_resource type="Script" path="res://Entities/Enemy/Cthulhu/Beam/beam.gd" id="1_wro2x"]
[ext_resource type="Texture2D" uid="uid://bryxu0j2s7c17" path="res://Entities/Enemy/Cthulhu/Beam/BeamTest.png" id="2_b8cr7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lp32u"]
size = Vector2(4, 30)

[node name="ActualBeam" type="Node2D"]
scale = Vector2(4, 1)
script = ExtResource("1_wro2x")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_b8cr7")

[node name="Area2D" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
shape = SubResource("RectangleShape2D_lp32u")

[node name="PointLight2D" type="PointLight2D" parent="."]
rotation = -4.71239
scale = Vector2(1.47, 0.22)
energy = 9.21
texture = ExtResource("2_b8cr7")
texture_scale = 4.55

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Sprite2D/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
